--- a/Frontend/src/app/dashboard/dash.css
+++ b/Frontend/src/app/dashboard/dash.css
@@ -9,8 +9,28 @@
     text-align: center;
     justify-content: center;
     color: black;
-    font-size: 26px;
+    font-size: 20px;    
     font-weight: 300px;
+    flex-wrap: wrap;
+    flex-direction: column;
+
+}
+
+.financial_box_graph{
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    padding: 30px;
+    width: 830px;
+    height: 400px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); /* Add a shadow effect */
+    text-align: center;
+    justify-content: center;
+    color: black;
+    font-size: 20px;    
+    font-weight: 300px;
+    flex-wrap: wrap;
+    flex-direction: column;
 
 }
 
@@ -31,4 +51,20 @@
     padding: 40px;
     font-size: 36px;
     
+}
+
+.titles_formatting{
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.numbers_formatting{
+    font-weight: 600;
+    font-size: 56px;
+    color: rgb(89, 196, 89);
+}
+.numbers_formatting_negative{
+    font-weight: 600;
+    font-size: 56px;
+    color: rgb(219, 59, 59);
 }
