--- a/frontend/src/app/dashboard/dash.css
+++ b/frontend/src/app/dashboard/dash.css
@@ -16,6 +16,8 @@
 
 }
 
+
+
 .financial_box_graph{
     display: flex;
     background-color: rgb(255, 255, 255);
@@ -67,4 +69,14 @@
     font-weight: 600;
     font-size: 56px;
     color: rgb(219, 59, 59);
+}
+.numbers_formatting_display{
+    font-weight: 600;
+    font-size: 56px;
+    color: #eaab00;
+}
+.percentage_formatting{
+    font-weight: 600;
+    font-size: 12px;
+    color: #000000;
 }
