--- a/frontend/src/app/dashboard/dash.css
+++ b/frontend/src/app/dashboard/dash.css
@@ -55,6 +55,17 @@
     
 }
 
+.tip_banner{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); /* Add a shadow effect */
+    max-width: 830px;
+    font-weight: 400;
+    justify-self: center;
+    padding: 40px;
+    font-size: 20px;
+    border-radius: 30px;
+    margin-bottom: 30px;
+}
+
 .titles_formatting{
     font-weight: 600;
     font-size: 20px;
